--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>HTML Forms</h2>
+<h2>Exemplo de formulario em HTML</h2>
 
 <form action="">
   <label for="fname">First name:</label><br>
