--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <h2>Exemplo de formulario em HTML</h2>
 
 <form action="">
-  <label for="fname">First name:</label><br>
+  <label for="fname">Primeiro nome:</label><br>
   <input type="text" id="fname" name="fname" value="Paulo"><br>
-  <label for="lname">Last name:</label><br>
+  <label for="lname">Ultimo nome:</label><br>
   <input type="text" id="lname" name="lname" value="Henrique"><br><br>
-  <input type="submit" value="Submit">
+  <input type="Confirmar" value="Submit">
 </form> 
 
-<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
+<p>Se você clicar no botão "Confirmar", os dados serão enviados para uma página chamada "/action_page.php".</p>
 
 </body>
 </html>
