--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <input type="text" id="fname" name="fname" value="Paulo"><br>
   <label for="lname">Ultimo nome:</label><br>
   <input type="text" id="lname" name="lname" value="Henrique"><br><br>
-  <input type="Confirmar" value="Submit">
+  <input type="Submit" value="Confirmar">
 </form> 
 
 <p>Se você clicar no botão "Confirmar", os dados serão enviados para uma página chamada "/action_page.php".</p>
