--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h2>Exemplo de formulario em HTML</h2>
 
-<form action="">
+<form action="teste.html">
   <label for="fname">Primeiro nome:</label><br>
   <input type="text" id="fname" name="fname" value="Paulo"><br>
   <label for="lname">Ultimo nome:</label><br>
