--- a/teste.html
+++ b/teste.html
@@ -9,8 +9,8 @@
 <form action="/action_page.php">
   <label for="cars">Escolha um carro:</label>
   <select id="cars" name="cars">
-    <option value="volvo">Volvo</option>
-    <option value="saab">Saab</option>
+    <option value="volkswagen">Volkswagen</option>
+    <option value="chevrolet">Chevrolet</option>
     <option value="fiat">Fiat</option>
     <option value="audi">Audi</option>
   </select>
