--- a/teste.html
+++ b/teste.html
@@ -6,6 +6,8 @@
 
 <p>O elemento select define uma lista suspensa:</p>
 
+<p>Escolha uma marca de carros entre as opções</p>
+  
 <form action="/action_page.php">
   <label for="cars">Escolha um carro:</label>
   <select id="cars" name="cars">
