--- a/teste.html
+++ b/teste.html
@@ -9,7 +9,7 @@
 <p>Escolha uma marca de carros entre as opções</p>
   
 <form action="/action_page.php">
-  <label for="cars">Escolha um carro:</label>
+  <label for="cars">Lista:</label>
   <select id="cars" name="cars">
     <option value="volkswagen">Volkswagen</option>
     <option value="chevrolet">Chevrolet</option>
