--- a/teste.html
+++ b/teste.html
@@ -6,7 +6,7 @@
 
 <p>O elemento select define uma lista suspensa:</p>
 
-<p>Escolha uma marca de carros entre as opções</p>
+<p>Escolha uma marca de carros entre as opções:</p>
   
 <form action="/action_page.php">
   <label for="cars">Lista:</label>
